# rust-drawing-generator-web

./: .gitignore  Cargo.toml  LICENSE  README.md  publish-weights.ps1
.github/workflows/: deploy.yml
docs/: index.html
model_shared/: Cargo.toml
model_shared/src/: lib.rs  scheduler.rs  unet.rs
src/: data.rs  emnist.rs  index.html  inference.rs  lib.rs  main.rs  model.rs  quickdraw.rs  training.rs
web/: Cargo.toml  build.rs
web/src/: lib.rs  model.rs
