[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.16.0", features = ["ndarray", "train", "dataset", "vision"] }
axum = "0.7.5"
tokio = { version = "1.38", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace]
members = [".", "web"]

