[package]
name = "mnist_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1.7"
burn = { version = "0.16.0", features = ["ndarray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
model_shared = { path = "../model_shared" }



[dev-dependencies]
wasm-bindgen-test = "0.3"
